<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/turquise" >

    <EditText
        android:id="@+id/UsuarioCampo"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_x="149dp"
        android:layout_y="64dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="131dp"
        android:text="@string/Contrasena"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/PassCampo"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_x="150dp"
        android:layout_y="120dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/IpCampo"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_x="149dp"
        android:layout_y="172dp"
        android:ems="10" />

    <EditText
        android:id="@+id/PuertoCampo"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_x="151dp"
        android:layout_y="228dp"
        android:ems="10" />

    <TextView
        android:id="@+id/Usuario"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_x="18dp"
        android:layout_y="80dp"
        android:text="@string/Usuario"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="188dp"
        android:text="@string/IP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="242dp"
        android:text="@string/Puerto"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/botonLoguearse"
        android:layout_width="124dp"
        android:layout_height="111dp"
        android:layout_x="100dp"
        android:layout_y="315dp"
        android:background="@drawable/botonnologin"
        android:text="Login" />

</AbsoluteLayout>